# so-operating-system-kernel

./: .gitignore  CMakeLists.txt  README.md
RowDaBoat-x64barebones-d4e1c147f975/: .bash_history  .gdb_history  .gitignore  CMakeLists.txt  Makefile  _gitignore  buildexe.sh  docker.sh  gdbinit  run.sh
RowDaBoat-x64barebones-d4e1c147f975/Bootloader/Pure64/src/: pure64.asm
RowDaBoat-x64barebones-d4e1c147f975/Kernel/: Makefile  Makefile.inc  loader.asm
RowDaBoat-x64barebones-d4e1c147f975/Kernel/asm/: interrupts.asm  io_read.asm  libasm.asm
RowDaBoat-x64barebones-d4e1c147f975/Kernel/include/: buddyManager.h  console.h  exceptions.h  fileDescriptor.h  idtLoader.h  intPairQueue.h  intQueue.h  interrupts.h  io_read.h  irqDispatcher.h  keyboard.h  lib.h  memManager.h  pipes.h  pixelMap.h  processStack.h  processes.h  queueBuffer.h  readerDaemon.h  scheduler.h  semaphore.h  sound.h  strings.h  syscall.h  time.h  types.h  videoDriver.h
RowDaBoat-x64barebones-d4e1c147f975/Kernel/src/: buddyManager.c  console.c  exceptions.c  fileDescriptor.c  idtLoader.c  intPairQueue.c  intQueue.c  irqDispatcher.c  kernel.c  keyboard.c  lib.c  memManager.c  naiveConsole.c  pipes.c  processStack.c  processes.c  queueBuffer.c  readerDaemon.c  scheduler.c  semaphore.c  sound.c  strings.c  syscall.c  testFunctions.c  time.c  videoDriver.c
RowDaBoat-x64barebones-d4e1c147f975/Trash/: exceptionHandling.asm  exceptions.c  verifications.c
RowDaBoat-x64barebones-d4e1c147f975/Userland/: Makefile.inc
RowDaBoat-x64barebones-d4e1c147f975/Userland/SampleCodeModule/asm/: interrupts.asm
(+54 files in other folders)
